testing fixed highlights height on mobile

--- a/client/src/components/UI/uniterrupted_highlights/FixedHighlights.css
+++ b/client/src/components/UI/uniterrupted_highlights/FixedHighlights.css
@@ -14,7 +14,7 @@
 }
 
 .fixed_highlights > iframe {
-  height: 75px;
+  height: 95px;
   width: 100%;
   max-width: 500px;
 }
